--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="css/epub-reader.css"/>
-    <link type="text/css" href="css/ui-lightness/jquery-ui-1.7.1.custom.css" rel="stylesheet"/>
-    <script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.7.1.custom.min.js"></script>
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="zip/jszip.js"></script>
     <script type="text/javascript" src="zip/jszip-load.js"></script>
     <script type="text/javascript" src="zip/jszip-deflate.js"></script>
     <script type="text/javascript" src="zip/jszip-inflate.js"></script>
+
     <script type="text/javascript" src="js/temp.js"></script>
     <script type="text/javascript" src="js/epubjs.js"></script>
 </head>
