--- a/html/reader.html
+++ b/html/reader.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-base-global.css"/>
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-text.css"/>
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-layout.css"/>
+
+    <!-- UI options -->
+    <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-wb-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-by-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-yb-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-text-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/UIOptions.css" />
+    <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/FullUIOptions.css" />
+    <!-- ui options -->
+
+    <link rel="stylesheet" href="../css/epubReaderUIOptions.css"/>
     <link rel="stylesheet" href="../css/epubReader.css"/>
+
 
     <!-- Fluid and jQuery Dependencies -->
     <script type="text/javascript" src="../infusion/lib/jquery/core/js/jquery.js"></script>
@@ -21,6 +34,26 @@
     <script type="text/javascript" src="../infusion/framework/core/js/FluidIoC.js"></script>
     <script type="text/javascript" src="../infusion/framework/enhancement/js/ProgressiveEnhancement.js"></script>
 
+    <!-- UI options -->
+    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.widget.js"></script>
+    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.mouse.js"></script>
+    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.slider.js"></script>
+    <script type="text/javascript" src="../infusion/lib/json/js/json2.js"></script>
+    <script type="text/javascript" src="../infusion/framework/core/js/FluidRequests.js"></script>  <!-- New in v1.3 -->
+    <script type="text/javascript" src="../infusion/framework/core/js/FluidDOMUtilities.js"></script>
+    <script type="text/javascript" src="../infusion/lib/fastXmlPull/js/fastXmlPull.js"></script>
+    <script type="text/javascript" src="../infusion/framework/renderer/js/fluidParser.js"></script>
+    <script type="text/javascript" src="../infusion/framework/renderer/js/fluidRenderer.js"></script>
+    <script type="text/javascript" src="../infusion/framework/renderer/js/RendererUtilities.js"></script>
+    <script type="text/javascript" src="../infusion/components/uiOptions/js/Store.js"></script>  <!-- New in v1.4 -->
+    <script type="text/javascript" src="../infusion/components/uiOptions/js/UIEnhancer.js"></script>
+    <script type="text/javascript" src="../infusion/components/uiOptions/js/UIOptions.js"></script>
+    <script type="text/javascript" src="../infusion/components/tableOfContents/js/TableOfContents.js"></script>
+    <!-- for FullNoPreviewUIOptions only: -->
+    <script type="text/javascript" src="../infusion/components/uiOptions/js/SlidingPanel.js"></script>  <!-- New in v1.4 -->
+    <script type="text/javascript" src="../js/epubUIOptions.js"></script>
+    <!-- ui options -->
+
     <!-- epubReader dependencies -->
     <script type="text/javascript" src="../JSZip/jszip.js"></script>
     <script type="text/javascript" src="../JSZip/jszip-load.js"></script>
@@ -32,23 +65,40 @@
 </head>
 <body>
 
-<div id="book" class="clear">
-    <div id="toc-container">
-        <ol id="toc"></ol>
-    </div>
-    <h1 id="content-title"></h1>
+<div class='epubReaderContainer fl-container-auto' align="center">
+    <div class="flc-uiOptions-optionPanel fl-uiOptions-optionPanel">
 
-    <div id="total-size">
-        <div id="remaining"></div>
+        <div id="epubUIOptions" class="flc-slidingPanel-panel"></div>
+
+        <!--TODO temporary place holdr for table of contents --->
+        <div id="toc-container">
+            <ol id="toc"></ol>
+        </div>
+
+        <div class="fl-panelBar">
+            <button  id="uiOptions-button" class="flc-slidingPanel-toggleButton fl-toggleButton"></button>
+            <button  id="toc-button" class="flc-slidingPanel-toggleButton fl-toggleButton" ></button>
+        </div>
     </div>
-    <div id="chapter_style"></div>
-    <div id="chapter_content"></div>
+
+    <h1 class="content-title"></h1>
+
+    <div id="book" class="fl-container-800 rounded-corners centerAlign">
+        <div id="total-size" align="left">
+            <div id="remaining"></div>
+        </div>
+        <div id="chapter_style"></div>
+        <div id="chapter_content" class="centerAlign"></div>
+    </div>
+
 </div>
 
 
 <script type="text/javascript">
 
-    var temp = fluid.epubReader("#book",{
+    fluid.staticEnvironment.uiEnhancer = fluid.uiEnhancer("#book");
+
+    var temp = fluid.epubReader(".epubReaderContainer",{
         book:{
             epubPath : "../tests/epubs/carroll-alice-in-wonderland-illustrations.epub"
         },
@@ -58,6 +108,18 @@
         },
         selectors:{
             chapterContent: "#chapter_content"
+        }
+    });
+
+    fluid.slidingPanel(".epubReaderContainer",{
+        selectors: {
+            panel: "#toc-container",
+            toggleButton: "#toc-button"
+        },
+        hideByDefault: true,
+        strings: {
+            showText: "+ Index",
+            hideText: "- Index"
         }
     });
 
