--- a/html/reader.html
+++ b/html/reader.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-base-global.css"/>
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-text.css"/>
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-layout.css"/>
-
     <!-- UI options -->
     <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
     <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-wb-uio.css" />
@@ -20,7 +19,6 @@
 
     <link rel="stylesheet" href="../css/epubReaderUIOptions.css"/>
     <link rel="stylesheet" href="../css/epubReader.css"/>
-
 
     <!-- Fluid and jQuery Dependencies -->
     <script type="text/javascript" src="../infusion/lib/jquery/core/js/jquery.js"></script>
@@ -38,6 +36,7 @@
     <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.widget.js"></script>
     <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.mouse.js"></script>
     <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.slider.js"></script>
+    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.draggable.js"></script>
     <script type="text/javascript" src="../infusion/lib/json/js/json2.js"></script>
     <script type="text/javascript" src="../infusion/framework/core/js/FluidRequests.js"></script>  <!-- New in v1.3 -->
     <script type="text/javascript" src="../infusion/framework/core/js/FluidDOMUtilities.js"></script>
@@ -49,9 +48,7 @@
     <script type="text/javascript" src="../infusion/components/uiOptions/js/UIEnhancer.js"></script>
     <script type="text/javascript" src="../infusion/components/uiOptions/js/UIOptions.js"></script>
     <script type="text/javascript" src="../infusion/components/tableOfContents/js/TableOfContents.js"></script>
-    <!-- for FullNoPreviewUIOptions only: -->
     <script type="text/javascript" src="../infusion/components/uiOptions/js/SlidingPanel.js"></script>  <!-- New in v1.4 -->
-    <script type="text/javascript" src="../js/epubUIOptions.js"></script>
     <!-- ui options -->
 
     <!-- epubReader dependencies -->
@@ -59,6 +56,7 @@
     <script type="text/javascript" src="../JSZip/jszip-load.js"></script>
     <script type="text/javascript" src="../JSZip/jszip-deflate.js"></script>
     <script type="text/javascript" src="../JSZip/jszip-inflate.js"></script>
+    <script type="text/javascript" src="../js/epubUIOptions.js"></script>
     <script type="text/javascript" src="../js/epubReader.js"></script>
 
 
@@ -122,6 +120,7 @@
             hideText: "- Index"
         }
     });
+
 
 </script>
 
