--- a/html/uiOptions/UIOptionsTemplate-text.html
+++ b/html/uiOptions/UIOptionsTemplate-text.html
@@ -1,35 +1,50 @@
-            <ul class="fl-clearfix">
-                <li class="flc-uiOptions-min-text-size">
-                    <label for="min-text-size">Text Size</label>
-                    <div class="fl-inputs">
-                        <div class="fl-force-left">
-                            <div class="fl-force-left fl-text-slider-left"><span class="fl-hidden-accessible">icon of a small capital letter 'A'</span></div>                       
-                            <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
-                            <div class="fl-force-left fl-text-slider-right"><span class="fl-hidden-accessible">icon of a large capital letter 'A'</span></div>                              
-                        </div>
-                        <div class="fl-slider-input"><input id="min-text-size" class="flc-textfieldSlider-field" type="text" /> times</div>
-                        
-                    </div>
-                </li>
-                <li>
-                    <label for="text-font">Text Style</label>
-                    <select class="flc-uiOptions-text-font fl-inputs" id="text-font">
-                    </select>               
-                </li>   
-                <li class="flc-uiOptions-line-spacing">
-                    <label for="line-spacing">Line Spacing</label>
-                    <div class="fl-inputs">
-                        <div class="fl-force-left">
-                            <div class="fl-force-left fl-spacing-slider-left"><span class="fl-hidden-accessible">icon of 3 horizontal lines with narrow spacing</span></div>                                      
-                            <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
-                            <div class="fl-force-left fl-spacing-slider-right"><span class="fl-hidden-accessible">icon of 3 horizontal lines with wide spacing</span></div>                             
-                        </div>
-                        <div class="fl-slider-input"><input id="line-spacing" class="flc-textfieldSlider-field" type="text" /> times</div>
-                        
-                    </div>
-                </li>           
-                <li>
-                    <label for="theme">Colour & Contrast</label>
-                    <select class="flc-uiOptions-theme fl-inputs" id="theme"></select>  
-                </li>
-            </ul>
+<ul class="fl-clearfix">
+    <li class="flc-uiOptions-min-text-size">
+        <label for="min-text-size">Text Size</label>
+
+        <div class="fl-inputs">
+            <div class="fl-force-left">
+                <div class="fl-force-left fl-text-slider-left"><span class="fl-hidden-accessible">icon of a small capital letter 'A'</span>
+                </div>
+                <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"></div>
+                <div class="fl-force-left fl-text-slider-right"><span class="fl-hidden-accessible">icon of a large capital letter 'A'</span>
+                </div>
+            </div>
+            <div class="fl-slider-input"><input id="min-text-size" class="flc-textfieldSlider-field" type="text"/> times
+            </div>
+
+        </div>
+    </li>
+    <li>
+        <label for="text-font">Text Style</label>
+        <select class="flc-uiOptions-text-font fl-inputs" id="text-font">
+        </select>
+    </li>
+    <li class="flc-uiOptions-line-spacing">
+        <label for="line-spacing">Line Spacing</label>
+
+        <div class="fl-inputs">
+            <div class="fl-force-left">
+                <div class="fl-force-left fl-spacing-slider-left"><span class="fl-hidden-accessible">icon of 3 horizontal lines with narrow spacing</span>
+                </div>
+                <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"></div>
+                <div class="fl-force-left fl-spacing-slider-right"><span class="fl-hidden-accessible">icon of 3 horizontal lines with wide spacing</span>
+                </div>
+            </div>
+            <div class="fl-slider-input"><input id="line-spacing" class="flc-textfieldSlider-field" type="text"/> times
+            </div>
+
+        </div>
+    </li>
+    <li>
+        <label for="theme">Colour & Contrast</label>
+        <select class="flc-uiOptions-theme fl-inputs" id="theme"></select>
+    </li>
+    <li>
+        <label for="pageMode">Page Mode</label>
+        <select class="flc-uiOptions-page-mode fl-inputs flc-font-custom" id="pageMode" name="pageMode">
+            <option value="split" class="fl-preview-theme flc-font-custom ">Split Pages</option>
+            <option value="scroll"  selected="selected" class="fl-preview-theme flc-font-custom ">Scroll Pages</option>
+        </select>
+    </li>
+</ul>
