--- a/html/reader.html
+++ b/html/reader.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-text.css"/>
     <link rel="stylesheet" type="text/css" href="../infusion/framework/fss/css/fss-layout.css"/>
     <!-- UI options -->
+
     <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
     <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-wb-uio.css" />
     <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/fss/fss-theme-by-uio.css" />
@@ -17,43 +18,15 @@
     <link rel="stylesheet" type="text/css" href="../infusion/components/uiOptions/css/FullUIOptions.css" />
     <!-- ui options -->
 
+
+    <script type="text/javascript" src="../infusion/InfusionAll.js"></script>
+
+
+    <!-- epubReader dependencies -->
+
     <link rel="stylesheet" href="../css/epubReaderUIOptions.css"/>
     <link rel="stylesheet" href="../css/epubReader.css"/>
 
-    <!-- Fluid and jQuery Dependencies -->
-    <script type="text/javascript" src="../infusion/lib/jquery/core/js/jquery.js"></script>
-    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.core.js"></script>
-    <script type="text/javascript" src="../infusion/framework/core/js/jquery.keyboard-a11y.js"></script>
-    <script type="text/javascript" src="../infusion/lib/jquery/plugins/scrollTo/js/jquery.scrollTo.js"></script>
-    <script type="text/javascript" src="../infusion/framework/core/js/Fluid.js"></script>
-    <script type="text/javascript" src="../infusion/framework/core/js/FluidDocument.js"></script>
-    <script type="text/javascript" src="../infusion/framework/core/js/FluidView.js"></script>
-    <script type="text/javascript" src="../infusion/framework/core/js/DataBinding.js"></script>
-    <script type="text/javascript" src="../infusion/framework/core/js/FluidIoC.js"></script>
-    <script type="text/javascript" src="../infusion/framework/enhancement/js/ProgressiveEnhancement.js"></script>
-
-    <!-- UI options -->
-    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.widget.js"></script>
-    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.mouse.js"></script>
-    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.slider.js"></script>
-    <script type="text/javascript" src="../infusion/lib/jquery/ui/js/jquery.ui.draggable.js"></script>
-    <script type="text/javascript" src="../infusion/lib/json/js/json2.js"></script>
-    <script type="text/javascript" src="../infusion/framework/core/js/FluidRequests.js"></script>  <!-- New in v1.3 -->
-    <script type="text/javascript" src="../infusion/framework/core/js/FluidDOMUtilities.js"></script>
-    <script type="text/javascript" src="../infusion/lib/fastXmlPull/js/fastXmlPull.js"></script>
-    <script type="text/javascript" src="../infusion/framework/renderer/js/fluidParser.js"></script>
-    <script type="text/javascript" src="../infusion/framework/renderer/js/fluidRenderer.js"></script>
-    <script type="text/javascript" src="../infusion/framework/renderer/js/RendererUtilities.js"></script>
-    <script type="text/javascript" src="../infusion/components/uiOptions/js/Store.js"></script>  <!-- New in v1.4 -->
-    <script type="text/javascript" src="../infusion/components/uiOptions/js/UIEnhancer.js"></script>
-    <script type="text/javascript" src="../infusion/components/uiOptions/js/UIOptions.js"></script>
-    <script type="text/javascript" src="../infusion/components/uiOptions/js/FatPanelUIOptions.js"></script>
-    <script type="text/javascript" src="../infusion/components/uiOptions/js/URLUtilities.js"></script>
-    <script type="text/javascript" src="../infusion/components/tableOfContents/js/TableOfContents.js"></script>
-    <script type="text/javascript" src="../infusion/components/uiOptions/js/SlidingPanel.js"></script>  <!-- New in v1.4 -->
-    <!-- ui options -->
-
-    <!-- epubReader dependencies -->
     <script type="text/javascript" src="../JSZip/jszip.js"></script>
     <script type="text/javascript" src="../JSZip/jszip-load.js"></script>
     <script type="text/javascript" src="../JSZip/jszip-deflate.js"></script>
@@ -70,7 +43,7 @@
 
         <div id="epubUIOptions" class="flc-slidingPanel-panel"></div>
 
-        <!--TODO temporary place holdr for table of contents --->
+        <!--TODO temporary place holder for table of contents --->
         <div id="toc-container">
             <ol id="toc"></ol>
         </div>
