--- a/html/uiOptions/UIOptionsTemplate-epub.html
+++ b/html/uiOptions/UIOptionsTemplate-epub.html
@@ -1,8 +1,7 @@
-<ul class="fl-clearfix fl-uiOptions-epub fl-uiOptions-topContainer">
-    Hello Dude
-    <li>
+<ul class="fl-clearfix">
+    <li class="fl-force-left fl-container-100">
         <label for="pageMode">Page Mode</label>
-        <select class="flc-uiOptions-page-mode fl-inputs" id="pageMode">
+        <select class="flc-uiOptions-page-mode fl-inputs flc-font-custom fl-force-left" id="pageMode">
         </select>
     </li>
 </ul>
