--- a/html/reader.html
+++ b/html/reader.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" type="text/css" href="../lib/infusion/framework/fss/css/fss-base-global.css"/>
     <link rel="stylesheet" type="text/css" href="../lib/infusion/framework/fss/css/fss-text.css"/>
     <link rel="stylesheet" type="text/css" href="../lib/infusion/framework/fss/css/fss-layout.css"/>
-    <!-- UI options -->
-
     <link rel="stylesheet" type="text/css" href="../lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
     <link rel="stylesheet" type="text/css" href="../lib/infusion/components/uiOptions/css/fss/fss-theme-wb-uio.css" />
     <link rel="stylesheet" type="text/css" href="../lib/infusion/components/uiOptions/css/fss/fss-theme-by-uio.css" />
@@ -16,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../lib/infusion/components/uiOptions/css/fss/fss-text-uio.css" />
     <link rel="stylesheet" type="text/css" href="../lib/infusion/components/uiOptions/css/UIOptions.css" />
     <link rel="stylesheet" type="text/css" href="../lib/infusion/components/uiOptions/css/FullUIOptions.css" />
-    <!-- ui options -->
+
 
     <script type="text/javascript" src="../lib/infusion/InfusionAll.js"></script>
 
@@ -36,10 +34,10 @@
 </head>
 <body>
 
-<div class='epubReaderContainer fl-container-auto' align="center">
+<div class='fl-epubReader-container fl-container-auto' align="center">
     <div class="flc-uiOptions-optionPanel fl-uiOptions-optionPanel">
 
-        <div id="epubUIOptions" class="flc-slidingPanel-panel"></div>
+        <div class="flc-epubReader-uiOptions-container flc-slidingPanel-panel"></div>
 
         <!--TODO temporary place holder for table of contents --->
         <div id="toc-container">
@@ -47,19 +45,19 @@
         </div>
 
         <div class="fl-panelBar">
-            <button  id="uiOptions-button" class="flc-slidingPanel-toggleButton fl-toggleButton"></button>
+            <button class="fl-epubReader-uiOptions-button flc-slidingPanel-toggleButton fl-toggleButton"></button>
             <button  id="toc-button" class="flc-slidingPanel-toggleButton fl-toggleButton" ></button>
         </div>
     </div>
 
-    <h1 class="content-title"></h1>
+    <h1 class="flc-epubReader-chapter-title"></h1>
 
-    <div id="book" class="fl-container-800 rounded-corners">
-        <div id="total-size" align="left">
-            <div id="remaining"></div>
+    <div class="fl-epubReader-bookContainer fl-container-800 rounded-corners">
+        <div class="fl-epubReader-progressIndicator" align="left">
+            <div class="flc-epubReader-progressIndicator-completed"></div>
         </div>
-        <div id="chapter_style"></div>
-        <div id="chapter_content" ></div>
+        <div class="flc-epubReader-chapter-styles"></div>
+        <div class="flc-epubReader-chapter-content" ></div>
     </div>
 
 </div>
@@ -68,7 +66,7 @@
 <script type="text/javascript">
 
     // extended to include my custom UI option
-    fluid.staticEnvironment.uiEnhancer = fluid.uiEnhancer("#book", {
+    fluid.staticEnvironment.uiEnhancer = fluid.uiEnhancer(".fl-epubReader-bookContainer", {
         components: {
             pageMode: {
                 type: "fluid.uiEnhancer.classSwapper",
@@ -87,26 +85,19 @@
         },
         classnameMap: {
             "pageMode": {
-                "split": "",
+                "split": "fl-font-uio-times",
                 "scroll": "fl-font-uio-times"
             }
         }
     });
 
-    var temp = fluid.epubReader(".epubReaderContainer",{
+    fluid.epubReader(".fl-epubReader-container",{
         book:{
             epubPath : "../tests/epubs/carroll-alice-in-wonderland-illustrations.epub"
-        },
-        constraints :{
-            maxImageHeight : 400,
-            maxImageWidth : 300
-        },
-        selectors:{
-            chapterContent: "#chapter_content"
         }
     });
 
-    fluid.slidingPanel(".epubReaderContainer",{
+    fluid.slidingPanel(".fl-epubReader-container",{
         selectors: {
             panel: "#toc-container",
             toggleButton: "#toc-button"
