--- a/html/reader.html
+++ b/html/reader.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="../lib/JSZip/jszip-load.js"></script>
     <script type="text/javascript" src="../lib/JSZip/jszip-deflate.js"></script>
     <script type="text/javascript" src="../lib/JSZip/jszip-inflate.js"></script>
+    <script type="text/javascript" src="../js/epubReaderFileFacilitator.js"></script>
     <script type="text/javascript" src="../js/epubUIOptions.js"></script>
     <script type="text/javascript" src="../js/epubReader.js"></script>
 
