--- a/html/uiOptions/epubUIOptionsTemplate.html
+++ b/html/uiOptions/epubUIOptionsTemplate.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-uiOptions fl-uiOptions-optionPanel">
+<form id="options" action="" class="fl-uiOptions fl-uiOptions-optionPanel fl-epubReader-tabsPanel">
     <div class="flc-uiOptions-controls">
         <div class="fl-force-right fl-inverted-color flc-padding-top8">
             <a id="save" class="flc-uiOptions-save fl-uiOptions-save" href="#" tabindex="3">Save All</a>
@@ -6,7 +6,7 @@
         </div>
         <ul class="fl-tabs fl-tabs-left fl-clearfix fl-inverted-color">
             <li><a href="#tab1" class="fl-tab-text" tabindex="1">Text and display</a></li>
-            <li><a href="#tab2" class="fl-tab-layout" tabindex="2">eBook Settings</a></li>
+            <li><a href="#tab2" class="fl-tab-ebookSetting" tabindex="2">eBook Settings</a></li>
         </ul>
         <div id="tab1" class="fl-uiOptions-text fl-clearfix flc-uiOptions-text-controls"></div>
         <div id="tab2" class="fl-uiOptions-text fl-clearfix flc-uiOptions-epub-controls"></div>
