--- a/html/reader.html
+++ b/html/reader.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="../lib/jquery-noty/css/jquery.noty.css"/>
     <link rel="stylesheet" href="../lib/jquery-noty/css/noty_theme_default.css"/>
 
+    <script type="text/javascript" src="../lib/jquery.waitforimages.js"></script>
     <script type="text/javascript" src="../lib/jquery-noty/js/jquery.noty.js"></script>
     <script type="text/javascript" src="../lib/jquery.qtip-1.0.0-rc3.custom/jquery.qtip-1.0.0-rc3.min.js"></script>
     <script type="text/javascript" src="../lib/JSZip/jszip.js"></script>
@@ -137,7 +138,7 @@
         }
     });
 
-    var galti,faltu;
+    var galti;
 
 </script>
 
