--- a/html/reader.html
+++ b/html/reader.html
@@ -73,7 +73,7 @@
                 </div>
                 <div id="tabb" class="fl-clearfix">
 
-                    <button type="button" class="flc-epubReader-addBookmark rounded-corners" >Add<br/> Bookmark</button>
+                    <button type="button" class="flc-epubReader-addBookmark fl-rounded-corners" >Add<br/> Bookmark</button>
 
                     <table class="fl-epubReader-bookmarkContainer" border="0" cellspacing="0" cellpadding="0">
                         <tr>
@@ -105,7 +105,7 @@
 
     <h1 class="flc-epubReader-chapter-title"></h1>
 
-    <div class="fl-epubReader-bookContainer fl-container-800 rounded-corners">
+    <div class="fl-epubReader-bookContainer fl-container-800 fl-rounded-corners">
         <div class="fl-epubReader-progressIndicator" align="left">
             <div class="flc-epubReader-progressIndicator-completed"></div>
         </div>
