Notes subcomponent improved

--- a/html/reader.html
+++ b/html/reader.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="../lib/JSZip/jszip-deflate.js"></script>
     <script type="text/javascript" src="../lib/JSZip/jszip-inflate.js"></script>
 
+    <script type="text/javascript" src="../js/epubReaderUtils.js"></script>
     <script type="text/javascript" src="../js/epubUIOptions.js"></script>
     <script type="text/javascript" src="../js/epubReaderFileFacilitator.js"></script>
     <script type="text/javascript" src="../js/epubReaderNavigatorChilds.js"></script>
@@ -104,15 +105,15 @@
                             <th>Chapter</th>
                             <th colspan="2">Manage</th>
                         </tr>
-                        <tr class="flc-epubReader-notes-tableRow">
-                            <td class="flc-epubReader-notes-id"></td>
-                            <td class="flc-epubReader-notes-chapter">
+                        <tr class="flc-epubReader-note-tableRow">
+                            <td class="flc-epubReader-note-id"></td>
+                            <td class="flc-epubReader-note-chapter">
                             </td>
                             <td>
-                                <a  class="flc-epubReader-notes-edit"></a>
+                                <a  class="flc-epubReader-note-edit"></a>
                             </td>
                             <td>
-                                <a  class="flc-epubReader-notes-delete"></a>
+                                <a  class="flc-epubReader-note-delete"></a>
                             </td>
                         </tr>
                     </table></div>
