Button Navigation added

--- a/html/reader.html
+++ b/html/reader.html
@@ -60,16 +60,16 @@
                             </select>
                         </li>
                         <li>
-                            Next
+                            <button type="button" class="flc-epubReader-nextButton fl-rounded-corners" >Next</button>
                         </li>
                         <li>
-                            Previous
+                            <button type="button" class="flc-epubReader-previousButton fl-rounded-corners" >Previous</button>
                         </li>
                         <li>
-                            NC
+                            <button type="button" class="flc-epubReader-nextChapterButton fl-rounded-corners" >Next<br/> Chapter</button>
                         </li>
                         <li>
-                            PC
+                            <button type="button" class="flc-epubReader-previousChapterButton fl-rounded-corners" >Previous<br/> Chapter</button>
                         </li>
                     </ul>
                 </div>
